eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mybank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.mybank-liyehua.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mybank-api-service
                port:
                  number: 80
  tls:
    - hosts:
      - api.mybank-liyehua.net
      secretName: mybank-api-cert
